--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using webapp
-@*@using webapp.Shared*@
+@using webapp.Shared
