--- a/WebApp/_Imports.razor
+++ b/WebApp/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using webapp
-@using webapp.Shared
+@using WebApp
+@using WebApp.Shared
