--- a/WebApp/Pages/FetchData.razor
+++ b/WebApp/Pages/FetchData.razor
@@ -5,7 +5,7 @@
 
 <h1>Weather forecast</h1>
 
-<p>This component demonstrates fetching data testfrom the server.</p>
+<p>This component demonstrates fetching data from the server.</p>
 
 @if (forecasts == null)
 {
