--- a/WebApp/Shared/MainLayout.razor.scss
+++ b/WebApp/Shared/MainLayout.razor.scss
@@ -6,6 +6,10 @@
 
 main {
     flex: 1;
+}.page {
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar {
@@ -21,17 +25,17 @@ main {
     align-items: center;
 }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
+    .top-row a, .top-row .btn-link {
         white-space: nowrap;
         margin-left: 1.5rem;
         text-decoration: none;
     }
 
-    .top-row ::deep a:hover, .top-row ::deep .btn-link:hover {
+    .top-row a:hover, .top-row .btn-link:hover {
         text-decoration: underline;
     }
 
-    .top-row ::deep a:first-child {
+    .top-row a:first-child {
         overflow: hidden;
         text-overflow: ellipsis;
     }
@@ -45,7 +49,7 @@ main {
         justify-content: space-between;
     }
 
-    .top-row ::deep a, .top-row ::deep .btn-link {
+    .top-row a, .top-row .btn-link {
         margin-left: 0;
     }
 }
@@ -68,7 +72,7 @@ main {
         z-index: 1;
     }
 
-    .top-row.auth ::deep a:first-child {
+    .top-row.auth a:first-child {
         flex: 1;
         text-align: right;
         width: 0;
