--- a/WebApp/Pages/Index.razor
+++ b/WebApp/Pages/Index.razor
@@ -3,7 +3,7 @@
 <PageTitle>Index</PageTitle>
 
 <div>
-	<img src=~/logoicon.png/>
+	<img src="/aalogo.png" asp-append-version="true"/>
 	<div class='background'>
 			<h1 class='title'>Tracking Number</h1>
 			<input placeholder='xxxx-xxxx-xxxx' class='traceinput'/>
