Styling ein mass

--- a/WebApp/wwwroot/scss/base/_reset.scss
+++ b/WebApp/wwwroot/scss/base/_reset.scss
@@ -5,8 +5,12 @@ html {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+.content {
   padding: 0;
 }
 
