--- a/WebApp/Pages/Index.razor
+++ b/WebApp/Pages/Index.razor
@@ -1,37 +1,50 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Track and Trace</PageTitle>
 
-<div>
-	<img src="/aalogo.png" asp-append-version="true"/>
-	<div class='background'>
-			<h1 class='title'>Tracking Number</h1>
-			<input placeholder='xxxx-xxxx-xxxx' class='traceinput'/>
-			<button>Enter</button>
+<a href="/">
+	<img class="logo" src="/aalogo.png" asp-append-version="true" alt="business logo" />
+</a>
+
+<div class="search-container">
+	<div class="ma">
+		<h1 class="title">Tracking Number</h1>
+        
+        <div class="search-input">
+        	<div class="search-input-field">
+        		<input class="trace-input"/>
+        		<p class="trace-input-text">xxxx-xxxx-xxxxxxxx</p>
+        	</div>
+        	<div class="btn-standard">
+        		<img src="icons/search.svg" alt="search">
+        	</div>
+        </div>
 	</div>
-	<div>
-		<label>History</label>
-		<table border="1">
-		<tbody>
-		@foreach(var status in statuses)
-		{
-			<tr>
-				<td>
-					@status
-				</td>
-			</tr>
-		}
-		</tbody>
-		</table>
-	</div>
+</div>
+
+<div class="content-container ma">
+	<h2>History</h2>
+
+	<TableTemplate Items="_history" Context="h">
+		<TableHeader>
+			@* <th>TimeStamp</th> *@
+			@* <th>Message</th> *@
+		</TableHeader>
+		<RowTemplate>
+			<td>@h.TimeStamp.ToString("dd/MM/yy HH:mm")</td>
+			<td>@h.Message</td>
+		</RowTemplate>
+	</TableTemplate>
 </div>
 
 @code 
 {
-	private IEnumerable<string> statuses = new[]
+	record TrackingRecord(DateTime TimeStamp, string Message);
+	
+	private List<TrackingRecord> _history = new()
 	{
-		"Gay",
-		"Faggit",
-		"Dead"
+		new TrackingRecord(DateTime.Now.AddDays(-2), "Picked up"),
+		new TrackingRecord(DateTime.Now.AddDays(-1), "In truck"),
+		new TrackingRecord(DateTime.Now, "Delivered!")
 	};
 }
