--- a/WebApp/wwwroot/scss/layout/_navigation.scss
+++ b/WebApp/wwwroot/scss/layout/_navigation.scss
@@ -1,62 +1,58 @@
-.navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+nav {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  background-color: $clr-secondary;
 }
 
-.top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+.navbar {
+  display: flex;
+  width: 100%;
+  padding: 1rem;
 }
 
-.navbar-brand {
-    font-size: 1.1rem;
+.navbar-item {
+  position: relative;
+  width: 4rem;
+  height: 4rem;
+  margin-right: 1rem;
+  
+  .navbar-item-bg {
+    position: absolute;
+    background-color: $clr-primary;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 10px;
+    transition: 200ms ease transform;
+  }
+  
+  img {
+    position: absolute;
+    width: 3rem;
+    height: 3rem;
+    left: .5rem;
+    top: .5rem;
+    z-index: 1;
+  }
+  
+  &:hover .navbar-item-bg{
+    transform: matrix(1, 0, 0, .5, 0, 16);
+  }
+  
+  &:hover .image-shadow {
+    opacity: .4;
+    //transition: 500ms ease opacity;
+  }
 }
 
-.oi {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler {
-        display: none;
-    }
-
-    .collapse {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
+.image-shadow {
+  position: absolute;
+  background-color: rgba(120, 120, 120);
+  opacity: 0;
+  width: 3rem;
+  height: 10px;
+  left: .5rem;
+  bottom: .6rem;
+  border-radius: 50%;
+  transition: 200ms ease opacity;
 }
