--- a/src/WebApp/Pages/Index.razor
+++ b/src/WebApp/Pages/Index.razor
@@ -1,19 +1,20 @@
 ﻿@page "/"
-
+@using WebApp.Services
+@using WebApp.ViewModels
 <PageTitle>Index</PageTitle>
 
 <div>
 	<img src=~/logoicon.png/>
 	<div class='background'>
 			<h1 class='title'>Tracking Number</h1>
-			<input placeholder='xxxx-xxxx-xxxx' class='traceinput'/>
-			<button>Enter</button>
+			<input placeholder='xxxx-xxxx-xxxx' bind="tracingId"class='traceinput'/>
+			<button onclick="OnTrackingIdButtonClick">Enter</button>
 	</div>
 	<div>
 		<label>History</label>
 		<table border="1">
 		<tbody>
-		@foreach(var status in statuses)
+		@foreach(var status in statusHistory)
 		{
 			<tr>
 				<td>
@@ -28,10 +29,13 @@
 
 @code 
 {
-	private IEnumerable<string> statuses = new[]
+	private string tracingId = "";
+	private DeliveryServiceStub _deliveryServiceStub;
+	private List<Delivery> statusHistory = new List<Delivery>();
+
+	private async void OnTrackingIdButtonClick()
 	{
-		"Gay",
-		"Faggit",
-		"Dead"
-	};
+		statusHistory.Add(await _deliveryServiceStub.GetDeliveryAsync(tracingId));
+	}
+
 }
