--- a/src/WebApp/Pages/Index.razor
+++ b/src/WebApp/Pages/Index.razor
@@ -7,18 +7,21 @@
 	<img src=~/logoicon.png/>
 	<div class='background'>
 			<h1 class='title'>Tracking Number</h1>
-			<input placeholder='xxxx-xxxx-xxxx' bind="tracingId"class='traceinput'/>
-			<button onclick="OnTrackingIdButtonClick">Enter</button>
+			<input placeholder='xxxx-xxxx-xxxx' @bind="tracingId"class='traceinput'/>
+			<button @onclick="OnTrackingIdButtonClick">Enter</button>
 	</div>
 	<div>
 		<label>History</label>
 		<table border="1">
 		<tbody>
-		@foreach(var status in statusHistory)
+		@foreach(var status in _statusHistory)
 		{
 			<tr>
 				<td>
-					@status
+					@status.UpdateTime: 
+				</td>
+				<td>
+					@status.Message
 				</td>
 			</tr>
 		}
@@ -30,12 +33,14 @@
 @code 
 {
 	private string tracingId = "";
-	private DeliveryServiceStub _deliveryServiceStub;
-	private List<Delivery> statusHistory = new List<Delivery>();
+	private DeliveryServiceStub _deliveryServiceStub = new DeliveryServiceStub();
+	private List<Delivery> _deliveries = new List<Delivery>();
+	private List<Status> _statusHistory = new List<Status>();
 
 	private async void OnTrackingIdButtonClick()
 	{
-		statusHistory.Add(await _deliveryServiceStub.GetDeliveryAsync(tracingId));
+		_deliveries.Add(await _deliveryServiceStub.GetDeliveryAsync(tracingId));
+		_statusHistory.AddRange(_deliveries[0].StatusHistory);
 	}
 
 }
