Fix datetime string format

--- a/src/WebApp/Pages/Index.razor
+++ b/src/WebApp/Pages/Index.razor
@@ -31,7 +31,7 @@
 		<TableHeader>
 		</TableHeader>
 		<RowTemplate>
-			<td>@h.UpdateTime".ToString("dd/MM/yy HH:mm")</td>
+			<td>@h.UpdateTime.ToString("dd/MM/yy HH:mm")</td>
 			<td>@h.Message</td>
 		</RowTemplate>
 	</TableTemplate>
